feature: add create and get media call
